--- a/src/index.scss
+++ b/src/index.scss
@@ -56,6 +56,7 @@ body {
 
 /* Results Screen */
 
+
 .results {
   position: fixed;
   top: 0;
@@ -107,15 +108,15 @@ body {
   border: 0;
   background-color: black;
   color: #aaa;
+  outline: none;
 }
 .results .management .next {
   flex: 1;
   font-size: 30px;
-  float: bottom;
 }
 
-/* Winner View */
 
+/* Winner View */
 .winner {
   font-size: 4rem;
   text-align: center;
