--- a/src/index.scss
+++ b/src/index.scss
@@ -118,6 +118,9 @@ body {
 
 /* Winner View */
 .winner {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
   font-size: 4rem;
   text-align: center;
 }
