added welcome page and moved winner func as component

--- a/src/index.scss
+++ b/src/index.scss
@@ -133,3 +133,11 @@ button:disabled {
   background-color: white;
   color: black;
 }
+
+/* Root view */
+.rootLink {
+  text-decoration: none;
+  margin-bottom: 20px;
+  color: black;
+  background-color: orange;
+}
